# spotify-api

./: Cargo.toml  spotify_cache
examples/: album_tracks.rs  authorization.rs  followed_artists.rs
src/: clock.rs  lib.rs  oauth.rs  senum.rs
src/api/: albums.rs  artists.rs  auth.rs  browse.rs  client.rs  episodes.rs  follow.rs  library.rs  mod.rs  pager.rs  personalization.rs  shows.rs
src/model/: album.rs  artist.rs  audio.rs  context.rs  device.rs  mod.rs  page.rs  playing.rs  playlist.rs  recommend.rs  senum.rs  show.rs  timestamp.rs  track.rs  user.rs
