[package]
name = "spotify-api"
version = "0.1.0"
authors = ["Bradlee Speice <bradlee@speice.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.12", optional = true }
http-client = { version = "4.0", features = [], optional = true }
http-types = { version = "2.3", optional = true }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = { version = "1.0", optional = true }

[features]
default = ["api"]
api = ["base64", "http-client", "http-types", "thiserror"]
