[package]
name = "spotify-api"
version = "0.1.0"
authors = ["Bradlee Speice <bradlee@speice.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.12", optional = true }
futures = { version = "0.3", optional = true }
http-client = { version = "4.0", features = [], optional = true }
http-types = { version = "2.3", optional = true }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"

[features]
default = ["api"]
api = ["base64", "futures", "http-client", "http-types"]

[dev-dependencies]
anyhow = "1.0"
async-std = { version = "1.6", features = ["attributes"] }
async-h1 = "2.1"
http-client = "4.0"
hyper = "0.13"
structopt = { version = "0.3", default-features = false }
tokio = { version = "0.2", features = ["full"] }
webbrowser = "0.5"
